# captcha-recognizer

./: .gitignore  README.md  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: hf-spaces.yml
scripts/: collect.py  generator.py  preprocess.py
src/: app.py  preprocess.py  shared.py  solve.py
